--- a/JobBoard.UI.MVC/Views/Home/Contact.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Contact.cshtml
@@ -17,14 +17,14 @@
                     <div class="mail-agileits-w3layouts">
                         <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
                         <div class="contact-right">
-                            <p>Telephone </p><span>+1 (100)222-23-33</span>
+                            <p>Telephone </p><span>1-800-555-5555</span>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="mail-agileits-w3layouts">
                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
                         <div class="contact-right">
-                            <p>Mail </p><a href="mailto:info@example.com">info@example.com</a>
+                            <p>Mail </p><a href="mailto:info@example.com">support@dundermifflin.com</a>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="col-md-8 agile_info_mail_img">
-
+                
             </div>
             <div class="clearfix"> </div>
             <div class="w3layouts_mail_grid">
