--- a/JobBoard.UI.MVC/Views/Locations/Edit.cshtml
+++ b/JobBoard.UI.MVC/Views/Locations/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2 style="margin-bottom:1em; margin-top:1em">Edit</h2>
 
 
 @using (Html.BeginForm())
