--- a/JobBoard.UI.MVC/Views/OpenPositions/Create.cshtml
+++ b/JobBoard.UI.MVC/Views/OpenPositions/Create.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create Open Position</h2>
+<h2 style="margin-bottom:1em; margin-top:1em">Create Open Position</h2>
 
 
 @using (Html.BeginForm()) 
@@ -20,13 +20,7 @@
                 @Html.ValidationMessageFor(model => model.PositionID, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Position.JobDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Position.JobDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Position.JobDescription, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        
         <div class="form-group">
             @Html.LabelFor(model => model.LocationID, "Location", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
