--- a/JobBoard.UI.MVC/Views/OpenPositions/Details.cshtml
+++ b/JobBoard.UI.MVC/Views/OpenPositions/Details.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2 style="margin-bottom:1em; margin-top:1em">@Html.DisplayFor(model => model.Position.Title)</h2>
 
 <div>
-    <h4>OpenPosition</h4>
-    <hr />
+    
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Location.StoreNumber)
@@ -38,7 +37,7 @@
             @Html.DisplayFor(model => model.Location.State)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Position.JobDescription)
+            Job Description
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Position.JobDescription)
@@ -48,7 +47,7 @@
 <p>
     @if (User.IsInRole("Manager") || User.IsInRole("Admin"))
     {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.OpenPositionID }) |
+        @Html.ActionLink("Edit", "Edit", new { id = Model.OpenPositionID }) 
     }
    
     @Html.ActionLink("Back to List", "Index")
