--- a/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
@@ -75,6 +75,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <li class="effect-3">@Html.ActionLink("Applications", "Index", "Applications")</li>
 
                                 }
+                                @if (User.IsInRole("Employee"))
+                                {
+                                    /**/
+                                    <li class="effect-3">@Html.ActionLink("My Applications", "Index", "Applications")</li>
+
+                                }
                                 @if (User.IsInRole("Admin"))
                                 {
                                     <li class="effect-3">@Html.ActionLink("Users", "Index", "UsersAdmin")</li>
