--- a/JobBoard.UI.MVC/Views/UsersAdmin/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/UsersAdmin/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2 class="tittle">Users</h2>
+<h2 style="margin-bottom:1em; margin-top:1em">Users</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
