--- a/JobBoard.UI.MVC/Views/Home/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
                 <h3 class="tittle">Hole Foods Job Board</h3>
             </div>*@
         <div class="inner_page_agile">
-            @*<h3>Dunder Mifflin</h3>*@
-            @*<h2 style="color:white">People persons. Paper people.</h2>*@
+            <h3>Dunder Mifflin</h3>
+            <h2 style="color:white">People persons. Paper people.</h2>
         </div>
         <div class="inner_sec_grids_info_w3ls">
             <div class="col-md-6 banner_bottom_left">
@@ -18,12 +18,13 @@
                 <p>
                     This application is for Dunder Mifflin employees to view and apply for open positions within the company. Upon registration, you will provide a resume` which will be made available to the appropriate hiring manager with a single click. If you have any questions feel free to contact Dunder Mifflin headquarters through the application.
                 </p>
-
+                <img src="~/Content/images/il_570xN.940198022_3swc.jpg" />
             </div>
             <div class="col-md-6 banner_bottom_right">
                 <div class="agileits_w3layouts_banner_bottom_grid">
 
-                    <img src="~/Content/images/downsizing-i-have-no-problem-with-that-i-have-been-recommending-downsizing-since-i-got-here-i-even-b.jpg" style="margin-bottom: 4em" />
+
+                    <img src="~/Content/images/Michael_Scott.jpg" style="margin-bottom:4em; margin-left:9em; margin-top:1.5em"/>
 
 
                 </div>
