--- a/JobBoard.UI.MVC/Views/Applications/Delete.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Delete.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
+<h3>Are you sure you want to delete this application?</h3>
 <div>
-    <h4>Application</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.UserID)
