Populated data tables with users, locations, applications

--- a/JobBoard.UI.MVC/Views/Home/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <h2 style="color:white">People persons. Paper people.</h2>
         </div>
         <div class="inner_sec_grids_info_w3ls">
-            <div class="col-md-6 banner_bottom_left">
+            <div class="col-md-6 banner_bottom_left" style="margin-bottom:3em">
 
                 <p>
                     This application is for Dunder Mifflin employees to view and apply for open positions within the company. Upon registration, you will provide a resume` which will be made available to the appropriate hiring manager with a single click. If you have any questions feel free to contact Dunder Mifflin headquarters through the application.
