--- a/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<JobBoard.Data.EF.OpenPosition>
 @using JobBoard.Data.EF
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "OpenPositions";
     List<Position> allPositions = ViewBag.allPositions;
 }
 
