--- a/JobBoard.UI.MVC/Views/Applications/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<JobBoard.Data.EF.Application>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Applications";
 }
 
-<h2 style="margin-bottom:1em; margin-top:1em">Applications</h2>
+<h2 style="margin-bottom:1em; margin-top:1em; text-align:center">Applications</h2>
 
 <table class="table">
     <tr>
