--- a/JobBoard.UI.MVC/Views/RolesAdmin/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/RolesAdmin/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2 style="margin-bottom:1em; margin-top:1em">Roles</h2>
+<h2 style="margin-bottom:1em; margin-top:1em; text-align:center">Roles</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
