--- a/JobBoard.UI.MVC/Views/UsersAdmin/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/UsersAdmin/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<JobBoard.UI.MVC.Models.ApplicationUser>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users";
 }
 
-<h2 style="margin-bottom:1em; margin-top:1em">Users</h2>
+<h2 style="margin-bottom:1em; margin-top:1em; text-align:center">All Job Board Users</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
