Changed IsDeclined to Status

--- a/JobBoard.UI.MVC/Views/Home/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <h2 style="color:white">People persons. Paper people.</h2>
         </div>
         <div class="inner_sec_grids_info_w3ls">
-            <div class="col-md-6 banner_bottom_left" style="margin-bottom:3em">
+            <div class="col-md-6 banner_bottom_left" style="margin-bottom:3em; margin-top:-1em">
 
                 <p>
                     This application is for Dunder Mifflin employees to view and apply for open positions within the company. Upon registration, you will provide a resume` which will be made available to the appropriate hiring manager with a single click. If you have any questions feel free to contact Dunder Mifflin headquarters through the application.
@@ -21,11 +21,11 @@
                 <img src="~/Content/images/il_570xN.940198022_3swc.jpg" />
             </div>
             <div class="col-md-6 banner_bottom_right">
-                <div class="agileits_w3layouts_banner_bottom_grid">
+                <div class="agileits_w3layouts_banner_bottom_grid" style="margin-bottom:4em; margin-left:9em">
 
 
-                    <img src="~/Content/images/Michael_Scott.jpg" style="margin-bottom:4em; margin-left:9em; margin-top:1em"/>
-
+                    <img src="~/Content/images/Michael_Scott.jpg" style="margin-bottom:1em"/>
+                    <h2>"I am a genie in a bottle and I am going to grant you three wishes. To move to Scranton, to have a great job, and to be my best friend."</h2>
 
                 </div>
             </div>
