--- a/JobBoard.UI.MVC/Views/Locations/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Locations/Index.cshtml
@@ -12,8 +12,8 @@
         @Html.ActionLink("Create New Location", "Create")
     }
 </p>
-<table class="myTable">
-    <thead>
+<table>
+    
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.StoreNumber)
@@ -32,9 +32,9 @@
                 </th>*@
             <th></th>
         </tr>
-    </thead>
+    
 
-    <tbody>
+    
         @foreach (var item in Model)
     {
         <tr>
@@ -54,7 +54,7 @@
                     @Html.DisplayFor(modelItem => item.AspNetUser.LastName)
                 </td>*@
             <td>
-                @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+                @if (User.IsInRole("Admin"))
                 {
                     @Html.ActionLink("Edit", "Edit", new { id = item.LocationID }, new { @class = "btn btn-default" }) @:|
                     @Html.ActionLink("Delete", "Delete", new { id = item.LocationID }, new { @class = "btn btn-default" })
@@ -63,7 +63,7 @@
             </td>
         </tr>
     }
-</tbody>
+
 
 </table>
 @section Script{
