--- a/JobBoard.UI.MVC/Views/Applications/Edit.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+
 }
 
 <h2>Edit</h2>
@@ -44,17 +45,17 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ManagerNotes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ManagerNotes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.ManagerNotes, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ManagerNotes, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsDeclined, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Status.StatusName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.IsDeclined)
-                    @Html.ValidationMessageFor(model => model.IsDeclined, "", new { @class = "text-danger" })
+                    @Html.EditorFor("StatusName", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Status.StatusName, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
