--- a/JobBoard.UI.MVC/Views/Applications/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Index.cshtml
@@ -22,7 +22,7 @@
         }
        
             <th>
-                @Html.DisplayNameFor(model => model.IsDeclined)
+                @Html.DisplayNameFor(model => model.Status.StatusName)
             </th>
         
         <th>
@@ -46,12 +46,12 @@
             @if (User.IsInRole("Manager") || User.IsInRole("Admin"))
             {
                 <td>
-                    @Html.DisplayFor(modelItem => item.ManagerNotes)
+                    @Html.TextAreaFor(modelItem => item.ManagerNotes, new { @style = "width:100%; height:7em" })
                 </td>
             }
             
             <td>
-                @Html.EditorFor(modelItem => item.IsDeclined)
+                @Html.DisplayFor(modelItem => item.Status.StatusName)
             </td>
 
 
@@ -64,6 +64,12 @@
             </td>
             <td>
                 @Html.ActionLink("Delete", "Delete", new { id = item.ApplicationID }, new { @class = "btn btn-default" })
+
+                @if (User.IsInRole("Manager") || User.IsInRole("Admin"))
+                {
+                    @: | 
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ApplicationID }, new { @class = "btn btn-default" })
+                }
             </td>
         </tr>
     }
