Fixed locations index view

--- a/JobBoard.UI.MVC/Views/Home/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             </div>*@
         <div class="inner_page_agile">
             <h3>Dunder Mifflin</h3>
-            <h2 style="color:white">People persons. Paper people.</h2>
+            <h2 style="color:white">Endless Paper in a Paperless World</h2>
         </div>
         <div class="inner_sec_grids_info_w3ls">
             <div class="col-md-6 banner_bottom_left" style="margin-bottom:3em; margin-top:-1em">
