Fiddled with problems relating to the changing of IsDeclined to Status

--- a/JobBoard.UI.MVC/Views/Applications/Delete.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Delete.cshtml
@@ -34,11 +34,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsDeclined)
+            @Html.DisplayNameFor(model => model.Status.StatusName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsDeclined)
+            @Html.DisplayFor(model => model.Status.StatusName)
         </dd>
 
         <dt>
