--- a/JobBoard.UI.MVC/Views/Applications/Edit.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Edit.cshtml
@@ -54,7 +54,7 @@
             @Html.LabelFor(model => model.Status.StatusName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor("StatusName", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.EditorFor(model => model.Status.StatusName, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Status.StatusName, "", new { @class = "text-danger" })
                 </div>
             </div>
